[package]
name = "markdown-renderer"
version = "0.0.0"
edition = "2021"
description = "A experimental markdown renderer."
license= "GPL-3.0-only"
authors = ["Vincent Udén <vincentuden@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["cli", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "5.1.0"
leptos = "0.2.4"
clap = { version = "4.1.11", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
